# manju-tool

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: API_COMPATIBILITY.md  IMPLEMENTATION_0.6.0.md  KNOWN_LIMITATIONS.md  REVIEW_GUIDE.md
manju/: __init__.py  cli.py
manju/pipeline/: __init__.py  adapt.py  create.py  generate_image.py  generate_video.py  generate_voice.py  storyboard.py  storyboard_schema.py  storyboard_stages.py  video.py  voice.py
manju/utils/: __init__.py  ai.py  config.py  formats.py  http.py  reportlab_pdf.py  runtime.py  use_guide.py
tests/: test_github_compliance.py  test_pipeline_integration.py  test_runtime_and_apis.py  test_storyboard_pipeline.py
